# diffbmp

./: .gitignore  DEVELOPMENT.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  analyze_ablation_results.py  analyze_ablation_results_complex.py  analyze_hyperparameter_tuning.py  app.py  compare_methods.py  create_fps_drop_datasets.py  cuda_gdb_manual.md  debug_cuda.gdb  demo.py  diffbmp_pipeline.py  experiment_sweep.py  frame_counter.py  initialization.py  main.py  main_color.py  main_pruning.py  main_sequential.py  main_svg.py  main_svgsplat.py  main_triangle.py  pdf_exporter.py  preprocessing.py  pyproject.toml  requirements.txt  run_evaluation.py  run_task.py  setup.py  svg_loader.py  svgsplat_initialization.py  test_configs.py  test_cuda_forward.py  test_demo_local.py  test_gradient_visualization.py  test_imbrush_import.py  (+5 more)
.github/: CODEOWNERS
animation/: README.md  psd_3d_flickering_mp4.py  psd_3d_pyvista_mp4.py  psd_3d_zoomin_mp4.py  psd_falling_mp4.py  psd_flickering_mp4.py  psd_layer_dropout.py  psd_parallax_mp4.py  psd_to_mp4.py  run_all.sh
apps/: post_processing.py
configs/: default.json  default_2k.json  default_abl1.json  default_celebA_marilyn.json  default_clip.json  default_clip_plastic.json  default_design_init.json  default_dollar_franklin.json  default_logo.json  default_logos_marilyn_color.json  default_lyrics.json  default_no_bg.json  default_png.json  default_png_no_bg.json  default_sequential.json  default_sequential_position_only.json  default_sequential_tile.json  default_task.json  default_tile.json  default_transition.json  default_xy_dynamics.json  girl.json  girl_color.json  girl_triangle.json  jmlee.json  jylee_svg.json  jylee_svg_hollow.json  sags_trump.json  sequential.json  seurat_autograph.json  seurat_autograph_highres.json  seurat_fingerprint.json  seurat_fingerprint_highres.json  smhong-dev-font.json  smhong-dev.json  smhong.json  syyoon.json
core/: base_initializer.py  opsizelv_initialization.py  preprocessing.py  svgsplat_initialization.py
cuda_tile_rasterizer/: README.md  __init__.py  build_psd_export.sh  ext.cpp  ext_fp16.cpp  psd_export_bindings.cpp  psd_export_uint8.py  setup.py  setup_fp16.py  setup_psd_export.py  tile_rasterize.cu  tile_rasterize.h  tile_rasterize_fp16.cpp  tile_rasterize_fp16.h
docs/: PSD_Export_CUDA_Implementation_Plan.md  PSD_Export_CUDA_구현계획서_한국어.md
imbrush/: __init__.py
output_webpage/: README.md  package-lock.json  package.json
pydiffbmp/: __init__.py  diffbmp_renderer.py  diffbmp_wrapper.py  functional.py
scripts/: remove_black_background.py
(+153 files in other folders)
