[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/smhongok/diffbmp"
Repository = "https://github.com/smhongok/diffbmp"
Documentation = "https://github.com/smhongok/diffbmp/blob/main/README.md"

[project]
name = "pydiffbmp"
version = "0.1.3"
description = "DiffBMP: Differentiable Rendering with Bitmap Primitives"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DiffBMP Team"},
]
keywords = ["differentiable-rendering", "2d-splatting", "image-synthesis", "pytorch", "cuda"]

dependencies = [
    "torch>=1.13.0",
    "torchvision",
    "numpy<2.0",
    "Pillow",
    "opencv-python",
    "matplotlib",
    "fonttools",
    "svgwrite",
    "svgpathtools",
    "scour",
    "cairosvg",
    "psd-tools",
    "nvidia-ml-py",
    "tqdm",
    "piq",
    "moviepy",
    "pyvista",
    "pylrc",
    "pandas",
    "scikit-image",
    "scipy",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools]
# Packages are defined in setup.py to include CUDA extensions
